--- a/src/lib/fonts.css
+++ b/src/lib/fonts.css
@@ -1,1 +1,2 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap');
